--- a/Profile PDF/Premium/index.html
+++ b/Profile PDF/Premium/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Profile</title>
+    <title>Premium User Profile</title>
   </head>
   <body style="margin: 0; padding: 0; background-color: #ffffff">
     <table
@@ -16,7 +16,7 @@
       <!-- Header Section -->
       <tr align="center">
         <td>
-          <a target="_blank" href="#"><img src="images/Logo.png" alt="" /></a>
+          <a target="_blank" href="#"><img src="../images/Logo.png" alt="" /></a>
         </td>
       </tr>
 
@@ -27,7 +27,7 @@
               <td>
                 <table
                   style="
-                    background-image: url(images/background.png);
+                    background-image: url(../images/background.png);
                     background-size: cover;
                     background-position: center;
                     width: 100%;
@@ -40,13 +40,13 @@
                   <tr>
                     <td>
                       <a target="_blank" href="#"
-                        ><img src="images/Profile.png" alt=""
+                        ><img src="../images/Profile.png" alt=""
                       /></a>
                       <span
                         ><p style="font-size: 7.47px; color: #ffffff">
                           User ID: NM1126132
                           <img
-                            src="images/copy-Icon.png"
+                            src="../images/copy-Icon.png"
                             style="padding-left: 3px"
                             alt=""
                           /></p
@@ -67,7 +67,7 @@
                         style="font-size: 9px; margin: 0; line-height: 12.45px"
                       >
                         <img
-                          src="images/date.png"
+                          src="../images/date.png"
                           style="
                             vertical-align: middle;
                             display: inline-block;
@@ -86,7 +86,7 @@
                         "
                       >
                         <img
-                          src="images/height.png"
+                          src="../images/height.png"
                           style="
                             vertical-align: middle;
                             display: inline-block;
@@ -105,7 +105,7 @@
                         "
                       >
                         <img
-                          src="images/loation.png"
+                          src="../images/loation.png"
                           style="
                             vertical-align: middle;
                             display: inline-block;
@@ -124,7 +124,7 @@
                         "
                       >
                         <img
-                          src="images/marrital.png"
+                          src="../images/marrital.png"
                           style="
                             vertical-align: middle;
                             display: inline-block;
@@ -143,7 +143,7 @@
                         "
                       >
                         <img
-                          src="images/profetion.png"
+                          src="../images/profetion.png"
                           style="
                             vertical-align: middle;
                             display: inline-block;
@@ -174,8 +174,8 @@
                             background-color: #eae6ed;
                           "
                         >
-                          <img src="images/trust.png" alt="" />
-                          <img src="images/subscription.png" alt="" />
+                          <img src="../images/trust.png" alt="" />
+                          <img src="../images/subscription.png" alt="" />
                         </span>
                       </p>
                       <img
@@ -184,7 +184,7 @@
                           padding: 6px;
                           border-radius: 4px;
                         "
-                        src="images/image 59.png"
+                        src="../images/image 59.png"
                         alt=""
                       />
                       <p style="font-size: 8px; color: #ffffff">
@@ -263,11 +263,11 @@
                                     <img
                                       align="center"
                                       style="padding-right: 6.85px"
-                                      src="images/phone.png"
+                                      src="../images/phone.png"
                                       alt=""
                                     />+880 17** *** *97<img
                                       align="right"
-                                      src="images/locker.png"
+                                      src="../images/locker.png"
                                       alt=""
                                     />
                                   </p>
@@ -284,11 +284,11 @@
                                     <img
                                       align="center"
                                       style="padding-right: 6.85px"
-                                      src="images/contact.png"
+                                      src="../images/contact.png"
                                       alt=""
                                     />Full Profile Access<img
                                       align="right"
-                                      src="images/locker.png"
+                                      src="../images/locker.png"
                                       alt=""
                                     />
                                   </p>
@@ -304,11 +304,11 @@
                                     <img
                                       align="center"
                                       style="padding-right: 6.85px"
-                                      src="images/messaging.png"
+                                      src="../images/messaging.png"
                                       alt=""
                                     />Unlimited Messaging<img
                                       align="right"
-                                      src="images/locker.png"
+                                      src="../images/locker.png"
                                       alt=""
                                     />
                                   </p>
@@ -324,11 +324,11 @@
                                     <img
                                       align="center"
                                       style="padding-right: 6.85px"
-                                      src="images/email.png"
+                                      src="../images/email.png"
                                       alt=""
                                     />hossainamzad38@gmail.com<img
                                       align="right"
-                                      src="images/locker.png"
+                                      src="../images/locker.png"
                                       alt=""
                                     />
                                   </p>
@@ -401,7 +401,7 @@
                               <img
                                 align="center"
                                 style="margin-right: 4px"
-                                src="images/info.png"
+                                src="../images/info.png"
                                 alt=""
                               />
                               Basic Info
@@ -466,7 +466,7 @@
                               <img
                                 align="center"
                                 style="margin-right: 4px"
-                                src="images/family.png"
+                                src="../images/family.png"
                                 alt=""
                               />
                               Family Details
@@ -503,14 +503,21 @@
                                   <p>Female Sibling</p>
                                 </td>
                                 <td
-                                align="right"
                                   style="
                                     font-size: 7.47px;
                                     line-height: 11.21px;
-                                    
                                   "
                                 >
-                                  <img src="./Images/Frame 7748.png" alt="">
+                                  <p>: Job holder</p>
+                                  <p>: Housewife</p>
+                                  <p>: Rich</p>
+                                  <p>: Uganda</p>
+                                  <p>:</p>
+                                  <p>:</p>
+                                  <p>:</p>
+                                  <p>:</p>
+                                  <p>: 04</p>
+                                  <p>: 02</p>
                                 </td>
                               </tr>
                             </table>
@@ -524,7 +531,7 @@
                               <img
                                 align="center"
                                 style="margin-right: 4px"
-                                src="images/personality.png"
+                                src="../images/personality.png"
                                 alt=""
                               />
                               Personality & Hobbies
@@ -574,10 +581,10 @@
                             <table align="center width="233.44" style="background-color: #ffffff; border-radius: 10px; align-items: center;">
                                 <tr>
                                   <td align="center" style="padding:  15.35px 0px; margin: 0;">
-                                    <img src="images/Rectangle 12.png" alt="" />
-                                    <img src="images/Rectangle 13.png" alt="" />
-                                    <img src="images/Rectangle 14.png" alt="" />
-                                    <img src="images/Rectangle 15.png" alt="" />
+                                    <img src="../images/Rectangle 12.png" alt="" />
+                                    <img src="../images/Rectangle 13.png" alt="" />
+                                    <img src="../images/Rectangle 14.png" alt="" />
+                                    <img src="../images/Rectangle 15.png" alt="" />
                                   </td>
                                 </tr>
                               </table>
@@ -590,7 +597,7 @@
                               <img
                                 align="center"
                                 style="margin-right: 4px"
-                                src="images/match.png"
+                                src="../images/match.png"
                                 alt=""
                               />
                               Her Ideal Match
@@ -635,7 +642,7 @@
                               <img
                                 align="center"
                                 style="margin-right: 4px"
-                                src="images/lyfe.png"
+                                src="../images/lyfe.png"
                                 alt=""
                               />
                               Physical Appearance & Lifestyle
@@ -702,7 +709,7 @@
                               <img
                                 align="center"
                                 style="margin-right: 4px"
-                                src="images/religious.png"
+                                src="../images/religious.png"
                                 alt=""
                               />
                               Religious Status
@@ -761,7 +768,7 @@
                               <img
                                 align="center"
                                 style="margin-right: 4px"
-                                src="images/education.png"
+                                src="../images/education.png"
                                 alt=""
                               />
                               Education & Career
@@ -819,7 +826,7 @@
                               <tr>
                                 <td
                                   style="
-                                    background-image: url(images/background02.png);
+                                    background-image: url(../images/background02.png);
                                     background-repeat: no-repeat;
                                     width: 233.44px;
                                     
@@ -829,7 +836,7 @@
                                     <tr>
                                       <td>
                                         <img
-                                          src="images/Frame 811765.png"
+                                          src="../images/Frame 811765.png"
                                           style="display: block"
                                           alt=""
                                         />
@@ -867,8 +874,8 @@
                                       </td>
                                       <td align="right" width="100%">
                                         <img
-                                          style="display: block;"
-                                          src="images/Frame 811764.png"
+                                          style="display: block"
+                                          src="../images/Frame 811764.png"
                                           alt=""
                                         />
                                         <p
@@ -908,7 +915,7 @@
                                       <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Age</p>
                                       <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
                                         29 to 33<img
-                                          src="images/blue.png"
+                                          src="../images/blue.png"
                                           align="right"
                                           alt=""
                                         />
@@ -916,7 +923,7 @@
                                       <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Height</p>
                                       <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
                                         5' 8"(172cm) to 6' 3"(190cm)<img
-                                          src="images/blue.png"
+                                          src="../images/blue.png"
                                           align="right"
                                           alt=""
                                         />
@@ -924,7 +931,7 @@
                                       <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Marital Status</p>
                                       <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
                                         Never Married<img
-                                          src="images/blue.png"
+                                          src="../images/blue.png"
                                           align="right"
                                           alt=""
                                         />
@@ -932,7 +939,7 @@
                                       <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Religious Commitment Level</p>
                                       <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
                                         High<img
-                                          src="images/blue.png"
+                                          src="../images/blue.png"
                                           align="right"
                                           alt=""
                                         />
@@ -940,7 +947,7 @@
                                       <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Religion / Community</p>
                                       <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
                                         Muslim<img
-                                          src="images/blue.png"
+                                          src="../images/blue.png"
                                           align="right"
                                           alt=""
                                         />
@@ -948,7 +955,7 @@
                                       <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Mother Tongue</p>
                                       <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
                                         Bengali, English, French<img
-                                          src="images/blue.png"
+                                          src="../images/blue.png"
                                           align="right"
                                           alt=""
                                         />
@@ -956,7 +963,7 @@
                                       <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Country Living in</p>
                                       <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
                                         India, Malaysia, United Kingdom, Canada<img
-                                          src="images/blue.png"
+                                          src="../images/blue.png"
                                           align="right"
                                           alt=""
                                         />
@@ -964,7 +971,7 @@
                                       <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Annual Income</p>
                                       <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
                                         Above USD 100,000<img
-                                          src="images/blue.png"
+                                          src="../images/blue.png"
                                           align="right"
                                           alt=""
                                         />
@@ -972,7 +979,7 @@
                                       <p style="font-size: 7.47px; color: #BA0060; line-height: 11.21px;">Blood Group</p>
                                       <p style="font-size: 7.47px; color: #22222299; line-height: 11.21px;">
                                         O+<img
-                                          src="images/blue.png"
+                                          src="../images/blue.png"
                                           align="right"
                                           alt=""
                                         />
